Create wrapper to accept string inputs regardless of final field type

--- a/src/log4j2.properties
+++ b/src/log4j2.properties
@@ -4,4 +4,4 @@ rootLogger.appenderRef.stdout.ref = STDOUT
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5p]: %m%n
+appender.console.layout.pattern = [%-5p][%c{10}]: %m%n
